--- a/data/styles.css
+++ b/data/styles.css
@@ -1,4 +1,7 @@
-﻿.ax_default {
+﻿body{
+  overflow-x: hidden;
+}
+.ax_default {
   font-family:'ArialMT', 'Arial';
   font-weight:400;
   font-style:normal;
